--- a/ChatBot/ChatBot.html
+++ b/ChatBot/ChatBot.html
@@ -10,6 +10,7 @@
     <script src="https://unpkg.com/supersimpledev/react-dom.js"></script>
 
     <script src="https://unpkg.com/supersimpledev/babel.js" ></script>
+    <script src="https://unpkg.com/supersimpledev/chatbot.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script src="ChatBot.js" type="text/babel">
     </script>
