learn about hooks {useState(), useEffect(), useRef()} & added style to the app

--- a/ChatBot/ChatBot.html
+++ b/ChatBot/ChatBot.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Chat Bot</title>
+  
+  <link rel="stylesheet" href="ChatBot.css">
   </head>
   <body>
     <div class="js-container"></div>
